# esp32-ml-object-recognition

./: .gitignore  README.md
device_esp32/: README.md  main.py  (+1 more)
training_pc/: .pre-commit-config.yaml  README.md  pyproject.toml
training_pc/data/processed/: processed.txt
training_pc/data/raw/: data_raw.txt  esp32_scan_20251218_000140.csv  scan_obj1.csv
training_pc/data/raw/objects/: circle.csv  oval.csv
training_pc/notebooks/: 01_read_csv.ipynb  02_model_architecture.ipynb  02_training.ipynb  03_evaluation.ipynb  Overview.ipynb
training_pc/src/: predict.py  train.py  visualizations.py
training_pc/src/data/processed/: train_test_split.npz  train_val_test_split.npz
training_pc/src/models/: best_shape_model.keras  object_recognition_model.keras
training_pc/src/utils/: data_handling.py  data_processing.py  data_reading.py  live_plot.py  model_architecture.py  read_csv.py
training_pc/tuning_results/ultrasonic_shape_v2/: oracle.json
training_pc/tuning_results/ultrasonic_shape_v2/trial_00/: trial.json
training_pc/tuning_results/ultrasonic_shape_v2/trial_01/: trial.json
training_pc/tuning_results/ultrasonic_shape_v2/trial_02/: trial.json
training_pc/tuning_results/ultrasonic_shape_v2/trial_03/: trial.json
training_pc/tuning_results/ultrasonic_shape_v2/trial_04/: trial.json
training_pc/tuning_results/ultrasonic_shape_v2/trial_05/: trial.json
training_pc/tuning_results/ultrasonic_shape_v2/trial_06/: trial.json
training_pc/tuning_results/ultrasonic_shape_v2/trial_07/: trial.json
training_pc/tuning_results/ultrasonic_shape_v2/trial_08/: trial.json
(+103 files in other folders)
